received http/0.9 and wsl promblems???

--- a/proxylab-handout/Makefile
+++ b/proxylab-handout/Makefile
@@ -10,6 +10,9 @@ LDFLAGS = -lpthread
 
 all: proxy
 
+block.o: block.c block.h
+	$(CC) $(CFLAGS) -c block.c
+
 subf.o: sbuf.c sbuf.h
 	$(CC) $(CFLAGS) -c sbuf.c
 
@@ -19,8 +22,8 @@ csapp.o: csapp.c csapp.h
 proxy.o: proxy.c csapp.h
 	$(CC) $(CFLAGS) -c proxy.c
 
-proxy: proxy.o csapp.o sbuf.o
-	$(CC) $(CFLAGS) proxy.o csapp.o sbuf.o -o proxy $(LDFLAGS)
+proxy: proxy.o csapp.o sbuf.o block.o
+	$(CC) $(CFLAGS) proxy.o csapp.o sbuf.o block.o -o proxy $(LDFLAGS)
 
 # Creates a tarball in ../proxylab-handin.tar that you can then
 # hand in. DO NOT MODIFY THIS!
